--- a/Backend/Sarafaii/appsettings.json
+++ b/Backend/Sarafaii/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SULAIMAN\\\\SQLEXPRESS;Initial Catalog=Sarafaii;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=SULAIMAN;Initial Catalog=Sarafaii;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "TokenKey": "Super complex secret key that has to be super long in order for it to be accounted for SHA 512 security signature",
   
