--- a/Frontend/sarafii-client/package.json
+++ b/Frontend/sarafii-client/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ag-grid-community": "^31.3.1",
+    "ag-grid-react": "^31.3.1",
     "classnames": "^2.3.2",
     "next": "14.2.3",
     "react": "^18",
