--- a/Frontend/sarafii-client/package.json
+++ b/Frontend/sarafii-client/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/themes": "^3.0.3",
     "ag-grid-community": "^31.3.1",
     "ag-grid-react": "^31.3.1",
     "classnames": "^2.3.2",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.4"
   },
   "devDependencies": {
     "@types/node": "^20",
