--- a/Frontend/sarafii-client/package.json
+++ b/Frontend/sarafii-client/package.json
@@ -15,10 +15,13 @@
     "ag-grid-community": "^31.3.1",
     "ag-grid-react": "^31.3.1",
     "classnames": "^2.3.2",
-    "next": "14.2.3",
+    "date-fns": "^3.6.0",
+    "next": "^14.2.4",
     "react": "^18",
+    "react-datepicker": "^7.0.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.4"
+    "react-hook-form": "^7.51.4",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
